src/dotnet/UI.Blazor/Components/TabPanel/tab.css
.tab-panel {
    @apply flex-y h-full w-full;
}
.tab-panel.hide-header .tab-panel-tabs {
    @apply hidden;
}
.tab-panel-tabs {
    @apply flex-none flex-x;
    @apply mb-2.5 pb-1.5 items-center;
    @apply overflow-hidden;
}
.tab-panel-tabs .btn-group {
    @apply w-full justify-evenly;
}
.tab-panel-tabs .btn-group-container {
    @apply flex-y mr-2;
}

.tab-panel-tabs .btn.tab-btn {
    @apply min-w-2 border-0 rounded-none;
    @apply text-02 text-caption-1 tracking-wider;
}
.tab-panel-tabs .btn.tab-btn.bottom-border-btn {
    @apply border-transparent border-b-2;
}
.tab-panel-tabs .btn.tab-btn.bottom-border-btn.on {
    @apply border-primary;
}
.tab-panel-tabs .btn.tab-btn.on .btn-content {
    @apply text-02 text-primary;
}
.tab-panel-tabs .btn.tab-btn.on + .shape {
    @apply bg-primary;
}
.tab-panel .tab {
    @apply grow w-full max-w-full;
}

.shape {
    @apply h-1 rounded-t self-center;
    width: calc(100% - 0.7rem);
}

